src/objects/FinServ__RollupByLookupFilterCriteria__c.object
<CustomObject>
    <description>Criteria for calculating rollup summary fields.</description>
    <fields>
        <fullName>FinServ__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FieldValue__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>not contains</fullName>
                </value>
                <value>
                    <fullName>not like</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__RollupByLookupConfig__c</fullName>
        <label>Parent Configuration</label>
        <referenceTo>FinServ__RollupByLookupConfig__c</referenceTo>
        <relationshipLabel>Rollup By Lookup Filter Criterias</relationshipLabel>
        <relationshipName>RollupByLookupFilterCriterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rollup By Lookup Filter Criteria</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Rollup By Lookup Filter Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup By Lookup Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>